--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "start": "npm run serve:ssr",
+    "dev": "nodemon src/index.js",
+    "build": "npm run build:ssr",
+    "serve:ssr": "node src/index.js",
+    "build:ssr": "angular-app/ng build --prod"
   },
   "author": "",
   "license": "ISC",
